@@ -8,6 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+HP-2011-05-05-0: Bugfix:      on Windows Vista, the 2nd fork of the daemonizing
+                              execd sometimes fails at boot time
+                 Issue:       GE-3328
+                 Review:      DG
+
 JG-2011-05-05-3: Bugfix:      install_execd prints error messages on 'install'
                               of /etc/init.d script on Ubuntu
                  Issue:       GE-3431
